--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+<html lang="zh-cn">
+  <head>
+    <title>{% block title %}  {% endblock %}</title>
+    {% block meta %} {% endblock %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
 
-</body>
+    <link href="http://cdn.staticfile.org/twitter-bootstrap/3.0.0-rc2/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="http://cdn.staticfile.org/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+      <script src="http://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+      <script src="http://cdn.staticfile.org/respond.js/1.3.0/respond.min.js"></script>
+    {% block link %}
+
+    {% endblock %}
+  </head>
+  <body class="body">
+    {% block header %}
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#"></a>
+            </div>
+        </nav>
+    {% endblock %}
+
+    {% block body %}
+    {% endblock %}
+
+    {% block body_script %}
+        <script src="http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js"></script>
+        <script src="http://cdn.staticfile.org/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
+    {% endblock %}
+
+  <footer class="footer">
+      {% block footer %}
+      {% endblock %}
+  </footer>
+  </body>
 </html>
